feat: Handle Dashboard Layout for mobile

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -7,4 +7,6 @@
 	--font-inter: Inter, sans-serif;
 
 	--color-primary: #025fbc;
+
+	--shadow-top: 0 -4px 6px -1px rgba(0, 0, 0, 0.1), 0 -2px 4px -1px rgba(0, 0, 0, 0.06);
 }
